--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -47,7 +47,7 @@
         
         <div class="ourteam-background">
           <div class="mainstyle mainstyle-2" id = "mainstyle2">
-            <h2 class="head2executive">Ban điều hành</h2>
+            <h2 class="head2executive">Ban Điều Hành</h2>
             {% include 'ourteam.html' %}
           </div>
         </div>
