--- a/project/templates/customer.html
+++ b/project/templates/customer.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="customer_style">
+    <div class="customer_style customer_loading" id="customer_style">
         <h1 class="c_title"> Đội ngũ cố vấn - bảo trợ</h1>
         <div class="c_wrapper">
             <div class="c_box">
@@ -70,6 +70,10 @@
                     </div>
                 </div>
             </div>
+            <script
+            src="{{ url_for('static', filename='js/customer.js')}}"
+            type="text/javascript"
+          ></script>
         </div>
 
 
