--- a/project/templates/process.html
+++ b/project/templates/process.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <div id="process_main">
-      <h2 class="p_title">Quy trình hoạt động - GreenBoost</h2>
+    <div class = "process_loading" id="process_main">
+      <h2  class="p_title">Quy trình hoạt động - GreenBoost</h2>
       <div class="process_container">
         <input type="radio" class="step1" checked id="" />
         <input type="radio" class="step2" checked id="" />
