--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -19,7 +19,7 @@
             <h2 class="heading2">Tôn trọng - Hiệu quả - Chuyên nghiệp</h2>
 
             <p>
-                Tiên phong thực hiện sứ mệnh nâng tầm thương hiệu - thúc đẩy kinh doanh trong hệ sinh thái các doanh nghiệp phát triển vì sự bền vững của xã hội.
+                Tiên phong thực hiện sứ mệnh "Nâng tầm thương hiệu - thúc đẩy kinh doanh" trong hệ sinh thái các doanh nghiệp phát triển bền vững.
             </p>
 
             <a class="button-scroll" href="/about-us/">Đọc thêm <span class = "button-icon">↘</span></a>
