--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <div class="container-fluid my-5" id="container-slideshow">
+    <div class="container-fluid my-5 slideshow_loading" id="container-slideshow">
     <h1 class="h1ofslideshow"> Ấn phẩm truyền thông</h1>
       <div class="row">
         <div class="col-12 m-auto">
@@ -161,5 +161,10 @@
         navText: ["<img src={{ url_for('static', filename='img/slideshow/prev button.png') }}>","<img src={{ url_for('static', filename='img/slideshow/next button.png') }}>"]
       });
     </script>
+   </script>
+   <script
+   src="{{ url_for('static', filename='js/slideshow.js')}}"
+   type="text/javascript"
+ ></script>
   </body>
 </html>
