--- a/project/templates/sponsor.html
+++ b/project/templates/sponsor.html
@@ -11,7 +11,7 @@
     />
 </head>
 <body>
-    <div class="sponsors-showcase">
+    <div class="sponsors-showcase sponsor_loading" id="sponsor-loading">
       <h2 class="h2ofsponsor">Một số đối tác nổi bật </h2>
         <div class="sponsors">
           <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor1-logo.png') }}" alt="Sponsor 1 Logo"></a>
@@ -24,5 +24,9 @@
           <a href="#" target="_blank"><img src="{{ url_for('static', filename='img/sponsor/sponsor8-logo.png') }}" alt="Sponsor 8 Logo"></a>
         </div>
       </div>
+      <script
+      src="{{ url_for('static', filename='js/sponsor.js')}}"
+      type="text/javascript"
+    ></script>
 </body>
 </html> 
