fix scroll to top and chatbox

--- a/project/templates/scrolltotop.html
+++ b/project/templates/scrolltotop.html
@@ -17,7 +17,8 @@
 
 </head>
 <body>
-    <button onclick="topFunction()" class="myBtn" title="Go to top"><i class="ri-arrow-up-fill scrollup__icon"></i></button>
+    <button onclick="topFunction()" class="myBtn show" title="Go to top">
+      <i class="ri-arrow-up-fill scrollup__icon"></i></button>
     <script
       src="{{ url_for('static', filename='js/scrolltotop.js')}}"
       type="text/javascript"
