--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -128,6 +128,7 @@
           </div>
         </div>
       </div>
+      {% include 'chatbot.html' %}
       {% include 'footer1.html' %}
     </div>
   </body>
