update scroll to top and chabbot

--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -226,6 +226,7 @@
       src="{{ url_for('static', filename='js/activities.js')}}"
       type="text/javascript"
     ></script>
+    {% include 'chatbot.html' %}
     {% include 'footer1.html' %}
   </body>
 </html>
