--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -24,36 +24,8 @@
     />
 </head>
 <body class="product-body">
-<!-- Messenger Plugin chat Code -->
-<div id="fb-root"></div>
 
-<!-- Your Plugin chat code -->
-<div id="fb-customer-chat" class="fb-customerchat">
-</div>
 
-<script>
-  var chatbox = document.getElementById('fb-customer-chat');
-  chatbox.setAttribute("page_id", "102113552756762");
-  chatbox.setAttribute("attribution", "biz_inbox");
-</script>
-
-<!-- Your SDK code -->
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      xfbml            : true,
-      version          : 'v16.0'
-    });
-  };
-
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
 
 {% include 'navbar.html' %} {% include 'feedback.html' %}
     <div class="bodystyle">
@@ -323,7 +295,7 @@ function closePopup5(){
 popup5.classList.remove("open-popup");}
 </script>
 
-
+{% include 'chatbot.html' %}
 {% include 'footer1.html' %}
 
 </body>
