update company name and new youtube video

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -86,7 +86,7 @@
             </p>
             <p class="question">
               Câu 2: Anh Trí, cơ duyên nào đã đưa anh đến với việc thành lập Eco
-              Smart Việt Nam?
+              Smart Solutions?
             </p>
             <p class="answer">
               Anh Trí: Cái duyên có lẽ bắt nguồn từ việc tôi tham gia một trong
@@ -95,7 +95,7 @@
               và Đổi mới Sáng tạo của Macalester trao thưởng cho các bạn trẻ có
               ý tưởng, sáng kiến đặc biệt giúp cải thiện cuộc sống của cộng đồng
               xung quanh họ. Tôi đã may mắn giành được giải thưởng và Eco Smart
-              Việt Nam là ý tưởng đã giúp tôi giành được giải thưởng đó (giải
+             Solutions là ý tưởng đã giúp tôi giành được giải thưởng đó (giải
               thưởng có tên ban đầu là Eco Heroes Campaign).
             </p>
             <p class="question">
@@ -106,7 +106,7 @@
               Anh Trí: Như tôi chia sẻ, tôi là người có máu liều lĩnh nhưng
               trong tầm kiểm soát, vì vậy mục tiêu và kỳ vọng của tôi thường cân
               bằng giữa những điều xa vời và thực tế. Tôi thực sự kỳ vọng Eco
-              Smart Việt Nam sẽ trở thành một trong những tổ chức môi trường lớn
+              Smart Solutions sẽ trở thành một trong những công ty tiền phong trong lĩnh vực phát triển sản phảm bền vững lớn
               nhất và chuyên nghiệp nhất ở khu vực miền Bắc. Tuy nhiên, trước
               mắt, Eco Smart chỉ cần lớn nhất ở trong Hà Nội thôi đã (chắc là
               lớn nhất trong Hà Nội là đứng thứ 2 hoặc thứ 3 toàn miền Bắc nhỉ?)
@@ -120,9 +120,7 @@
               không mọi người phải thất vọng bởi vì với đội ngũ của Eco Smart
               chúng tôi - những người mà tôi tin là đầy tài năng và trách nhiệm
               - sẽ có thể giúp dự án phát triển và lan tỏa rộng rãi. Ngoài ra,
-              chúng tôi cũng xin được cam kết là Eco Smart Solutions sẽ luôn nỗ
-              lực hết mình để hoàn thành sứ mệnh mà chính chúng tôi đặt ra: Hành
-              động vì sự phát triển và an toàn của môi trường Việt Nam!”
+              chúng tôi cũng xin được cam kết luôn đặt tôn chỉ Hiệu quả - Tôn trọng - Chuyên nghiệp, luôn cố gắng hoạt động vì mục tiêu kiến tạo một thế giới bền vững!
             </p>
             <hr />
           </div>
