--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -131,7 +131,7 @@
             <span class="text2"
               >Nếu sự ngọt ngào của Ngày lễ tình nhân khiến bạn xao xuyến,
               thì…
-              những thiệt hại mà ngày lễ này gây ra cho môi trường có thể thực sự khiến trái tim bạn tan nát....
+              những thiệt hại mà ngày lễ này gây ra cho môi trường có thể thực sự khiến trái tim bạn tavien nát....
             </span>
             <div class="readmore">
               <a
