--- a/project/templates/activities/page2.html
+++ b/project/templates/activities/page2.html
@@ -94,7 +94,7 @@
               <div class="text1">ECO VOTE: ĐÂU LÀ QUÁN QUÂN LÒNG BẠN?</div>
             </div>
             <span class="text2"
-              >Ngày nay, nhu cầu sử dụng các sản phẩm thân thiện với môi trường của con người ngày càng tăng,
+              >Ngày nay, nhu cầu sử dụng các sản phẩm phát triển bền vững của con người ngày càng tăng,
               bởi lẽ ý thức về việc cần phải bảo vệ Trái Đất đang ngày càng được nâng cao...
             </span>
             <div class="readmore">
