--- a/project/templates/process.html
+++ b/project/templates/process.html
@@ -89,7 +89,7 @@
               <h1>Xây dựng cộng đồng</h1>
               <p>
                 Chúng tôi sẽ xây dựng một cộng đồng các doanh nghiệp kinh doanh
-                sản phẩm thân thiện môi trường. Chúng tôi sẽ tạo ra các sự kiện
+                sản phẩm phát triển bền vững. Chúng tôi sẽ tạo ra các sự kiện
                 trực tuyến và offline nhằm tăng cường sự kết nối giữa các doanh
                 nghiệp và khách hàng. Chúng tôi cũng sẽ cung cấp các nội dung
                 giáo dục và thông tin về các sản phẩm phát triển bền vững cho
