--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -25,10 +25,9 @@
           <hr class="seperate" />
           <div id="detailtext">
             <h5 class="text1">
-              Giai đoạn 2022-2024, Eco Smart Solutions hoạt động với tầm nhìn
-              trở thành một trong những tổ chức sinh viên tích cực hành động vì
-              môi trường hàng đầu miền Bắc. Đặc biệt, ESS là đơn vị tiên phong thúc đẩy phát 
-              triển các sản phẩm thân thiện với môi trường.
+              Đến năm 2024, Eco Smart Solutions đặt mục tiêu trở thành doanh nghiệp đi đầu trong sứ mệnh xây dựng hệ sinh thái các doanh nghiệp bền vững tại Việt Nam.         
+Tầm nhìn đến năm 2026, Eco Smart Solutions mục tiêu tiên phong trên thị trường Đông Nam Á trong việc cung cấp giải pháp hỗ trợ kinh doanh tối ưu, đáp ứng nhu cầu tăng trưởng của các doanh nghiệp bền vững trong và ngoài nước.
+
             </h5>
             <a href="/about-us/" class="text2">Đọc thêm</a>
           </div>
