Edit flipping animation on product feature

--- a/project/templates/productfeature.html
+++ b/project/templates/productfeature.html
@@ -39,21 +39,26 @@
           <div class="owl-2 owl-carousel owl-theme">
             <div class="item mb-4">
               <div class="cardofproduct">
-                <a
-                  href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"
-                >
-                  <img
-                    src="{{ url_for('static', filename='img/activities/activities1.jpg') }}"
-                    alt="activites1"
-                    class="card-img-topofproduct"
-                  />
-                </a>
+                <div class="card__face card__face--front">
+                  <a href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782">
+                    <img src="{{ url_for('static', filename='img/activities/activities1.jpg') }}" alt="activites1" class="card-img-topofproduct" />
+                  </a>
+                </div>
+                <div class="card__face card__face--back">
+                  <p class = "nameofproductfeature"> Dầu dưỡng Hoàng Lan
+                    90.000 VND
+                  <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân </p>  
+                  <p>▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon </p> 
+                  <p>▪️Ích trí, bổ huyết, định thần</p>
+                </div>
               </div>
             </div>
+            
 
             <div class="item">
               <div class="cardofproduct">
-                <a
+                <div class="card__face card__face--front">
+                  <a
                   href="https://www.facebook.com/photo.php?fbid=137191855908935&set=pb.100088543633780.-2207520000.&type=3"
                 >
                   <img
@@ -61,12 +66,21 @@
                     alt="activites2"
                     class="card-img-topofproduct"
                 /></a>
+                </div>
+                <div class="card__face card__face--back">
+                  <p class = "nameofproductfeature"> Dầu dưỡng Hoàng Lan
+                    90.000 VND
+                  <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân </p>  
+                  <p>▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon </p> 
+                  <p>▪️Ích trí, bổ huyết, định thần</p>
+                </div>
               </div>
             </div>
 
             <div class="item">
               <div class="cardofproduct">
-                <a
+                <div class="card__face card__face--front">
+                  <a
                   href="https://www.facebook.com/photo.php?fbid=134825176145603&set=pb.100088543633780.-2207520000.&type=3"
                 >
                   <img
@@ -74,6 +88,14 @@
                     alt="activites3"
                     class="card-img-topofproduct"
                 /></a>
+                </div>
+                <div class="card__face card__face--back">
+                  <p class = "nameofproductfeature"> Dầu dưỡng Hoàng Lan
+                    90.000 VND
+                  <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân </p>  
+                  <p>▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon </p> 
+                  <p>▪️Ích trí, bổ huyết, định thần</p>
+                </div>
               </div>
             </div>
 
