Adding Banner (without CSS and Animation)

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -18,12 +18,12 @@
 <body style="font-family: 'Inter', sans-serif">
     <!-- include navbar.html here -->
     {% include 'navbar.html' %}
-    
+
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %}   {% include 'process.html' %} {% include 'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %} {% include 'slideshow.html' %} {% include 'video.html' %}  {% include
-        'scrolltotop.html' %}{% include 'footer1.html' %} {% include 'chatbot.html' %}
-   
+    {% include 'scrolling.html' %} {% include 'process.html' %} {% include 'unique_banner.html' %}{% include 'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %} {% include 'slideshow.html' %}
+    {% include 'video.html' %} {% include 'scrolltotop.html' %}{% include 'footer1.html' %} {% include 'chatbot.html' %}
+
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
 
