--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -21,8 +21,8 @@
     
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %}   {% include 'process.html' %} {% include 'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %} {% include 'slideshow.html' %} {% include 'video.html' %}  {% include
-        'scrolltotop.html' %}{% include 'footer1.html' %} {% include 'chatbot.html' %}
+    {% include 'scrolling.html' %}   {% include 'process.html' %} {% include 'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %} {% include 'slideshow.html' %} {% include 'video.html' %}
+    {% include 'map.html' %} {% include'scrolltotop.html' %}{% include 'footer1.html' %} {% include 'chatbot.html' %}
    
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
