--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap"
+        rel="stylesheet">
 
     <title>Eco Smart Solutions</title>
     <link rel="icon" href="{{ url_for('static', filename='img/aboutus/logo2.png') }}" type="image/x-icon" />
@@ -18,13 +19,16 @@
 <body style="font-family: 'Inter', sans-serif">
     <!-- include navbar.html here -->
     {% include 'navbar.html' %}
-    
+
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %}   {% include 'process.html' %} {% include 'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %} {% include 'slideshow.html' %} {% include 'video.html' %}
+    {% include 'scrolling.html' %} {% include 'unique_banner.html' %} {% include 'process.html' %} {% include
+    'customer.html' %} {% include 'achievement.html' %}{% include 'sponsor.html' %} {% include'productfeature.html' %}
+    {% include 'slideshow.html' %} {% include 'video.html' %}
     {% include 'map.html' %} {% include'scrolltotop.html' %}{% include 'footer1.html' %} {% include 'chatbot.html' %}
-   
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
 
 </html>
