Adding banner title

--- a/project/templates/unique_banner.html
+++ b/project/templates/unique_banner.html
@@ -10,21 +10,27 @@
 </head>
 
 <body>
-    <div id="unique_banner_style">
-        <div class="banner_item">
-            <span><i class="fa-solid fa-person-chalkboard"></i></span>
-            <div class="banner_item_heading">Chi phí tối ưu</div>
-            <div class="banner_item_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</div>
-        </div>
-        <div class="banner_item">
-            <span><i class="fa-solid fa-person-chalkboard"></i></span>
-            <div class="banner_item_heading">Đội nhóm chuyên nghiệp</div>
-            <div class="banner_item_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</div>
-        </div>
-        <div class="banner_item">
-            <span><i class="fa-solid fa-person-chalkboard"></i></span>
-            <div class="banner_item_heading">Sứ mệnh cao cả</div>
-            <div class="banner_item_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</div>
+    <div id="unique_banner_background">
+        <h1 class="unique_banner_title">Sự khác biệt của Eco Smart Solutions</h1>
+        <div id="unique_banner_style">
+            <div class="banner_item">
+                <span><i class="fa-solid fa-person-chalkboard"></i></span>
+                <div class="banner_item_heading">Chi phí tối ưu</div>
+                <div class="banner_item_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+                    consectetur, adipisci velit...</div>
+            </div>
+            <div class="banner_item">
+                <span><i class="fa-solid fa-person-chalkboard"></i></span>
+                <div class="banner_item_heading">Đội nhóm chuyên nghiệp</div>
+                <div class="banner_item_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+                    consectetur, adipisci velit...</div>
+            </div>
+            <div class="banner_item">
+                <span><i class="fa-solid fa-person-chalkboard"></i></span>
+                <div class="banner_item_heading">Sứ mệnh cao cả</div>
+                <div class="banner_item_content">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+                    consectetur, adipisci velit...</div>
+            </div>
         </div>
     </div>
 </body>
