add hover effect for activities& product cards

--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -33,7 +33,7 @@
 <div class="menu">
         
     <div class="product-items">
-        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
+        <a class="img-container" href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
             <img src="{{ url_for('static', filename='img/products/product_page_5.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
@@ -51,7 +51,7 @@
     </div>
        
     <div class="product-items">
-        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
+        <a class="img-container" href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
             <img src="{{ url_for('static', filename='img/products/product_page_4.jpg') }}" alt=""></a>
         <div class="details">
             <div class="details-sub">
@@ -68,7 +68,7 @@
         </div>
     </div>        
     <div class="product-items">
-        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
+        <a  class="img-container" href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
             <img src="{{ url_for('static', filename='img/products/product_page_3.jpg') }}" alt=""></a>
         <div class="details">
             <div class="details-sub">
@@ -85,7 +85,7 @@
         </div>
     </div>        
     <div class="product-items">
-        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
+        <a class="img-container"  href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
             <img src="{{ url_for('static', filename='img/products/product_page_2.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
@@ -102,7 +102,7 @@
         </div>
     </div>        
     <div class="product-items">
-        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
+        <a class="img-container"  href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
             <img src="{{ url_for('static', filename='img/products/product_page_1.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
