--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -14,9 +14,9 @@
         <div class="department first-department">
             <!--Ban Chu Tich-->
             <!--Viet Hoan-->
-            <div class="card">
+            <div class="card" id="thuy">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/coo.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                    <img src="{{ url_for('static', filename='img/aboutus/coo.jpg') }}">
                 </div>
                 <h3>Ms. Mai Thu Thủy</h3>
                 <p>Trưởng phòng Hành chính - Nhân sự</p>
@@ -25,9 +25,9 @@
             </div>
 
             <!--Anh Tri-->
-            <div class="card">
+            <div class="card" id="tri">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/president.png') }}" alt="Mr Bui Dinh Tri - Founder">
+                    <img src="{{ url_for('static', filename='img/aboutus/president.png') }}">
                 </div>
                 <h3>Mr. Bùi Đình Trí</h3>
                 <p>Giám đốc điều hành</p>
@@ -35,9 +35,9 @@
                 </p>
             </div>
             <!--Kim Ngan-->
-            <div class="card">
+            <div class="card" id="hoang">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/cco.png') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                    <img src="{{ url_for('static', filename='img/aboutus/cco.png') }}">
                 </div>
                 <h3>Mr. Phan Huy Hoàng</h3>
                 <p>Giám đốc công nghệ</p>
@@ -46,30 +46,30 @@
                 <div class="icons"></div>
             </div>
         </div>
-        <div class="department">
+        <div class="department last-department">
             <!--RD and HR Department-->
             <!--Anh Trung-->
-            <div class="card">
+            <div class="card" id="linh">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/headbus.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                    <img src="{{ url_for('static', filename='img/aboutus/headbus.jpg') }}">
                 </div>
                 <h3>Lưu Phan Phương Linh</h3>
                 <p>Giám đốc kinh doanh</p>
                 <div class="icons"></div>
             </div>
             <!--Chau Anh-->
-            <div class="card">
+            <div class="card" id="chau-anh">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/headrd.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                    <img src="{{ url_for('static', filename='img/aboutus/headrd.jpg') }}">
                 </div>
                 <h3>Ngô Châu Anh</h3>
                 <p>Trưởng phòng nghiên cứu và phát triển</p>
                 <div class="icons"></div>
             </div>
             <!--Chi Giang-->
-            <div class="card">
+            <div class="card" id="khue">
                 <div class="img-container">
-                    <img src="{{ url_for('static', filename='img/aboutus/headmarcom.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
+                    <img src="{{ url_for('static', filename='img/aboutus/headmarcom.jpg') }}">
                 </div>
                 <h3>Nguyễn Minh Khuê</h3>
                 <p>Trưởng phòng Marketing</p>
