Change UI of card-back

--- a/project/templates/productfeature.html
+++ b/project/templates/productfeature.html
@@ -50,6 +50,9 @@
                   <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân </p>  
                   <p>▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon </p> 
                   <p>▪️Ích trí, bổ huyết, định thần</p>
+                  <img class="logoforproduct" src="{{ url_for('static', filename='img/index/another-logo.png') }}" alt="logo" />
+                  <img class="logoforproduct2" src="{{ url_for('static', filename='img/index/another-logo2.png') }}" alt="logo" />
+
                 </div>
               </div>
             </div>
@@ -73,6 +76,9 @@
                   <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân </p>  
                   <p>▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon </p> 
                   <p>▪️Ích trí, bổ huyết, định thần</p>
+                  <img class="logoforproduct" src="{{ url_for('static', filename='img/index/another-logo.png') }}" alt="logo" />
+                  <img class="logoforproduct2" src="{{ url_for('static', filename='img/index/another-logo2.png') }}" alt="logo" />
+
                 </div>
               </div>
             </div>
@@ -95,6 +101,8 @@
                   <p>▪️Hồng nhuận da, chống lão hoá, duy trì nét thanh xuân </p>  
                   <p>▪️Tăng sức đề kháng, bồi bổ sức khỏe, giúp ngủ ngon </p> 
                   <p>▪️Ích trí, bổ huyết, định thần</p>
+                  <img class="logoforproduct" src="{{ url_for('static', filename='img/index/another-logo.png') }}" alt="logo" />
+                  <img class="logoforproduct2" src="{{ url_for('static', filename='img/index/another-logo2.png') }}" alt="logo" />
                 </div>
               </div>
             </div>
