--- a/project/templates/customer.html
+++ b/project/templates/customer.html
@@ -16,8 +16,11 @@
         <div class="c_wrapper">
             <div class="c_box">
 
-                <p><i class="fas fa-quote-left quote"></i>Ngay từ khi đọc bản đề xuất kinh doanh của Eco Smart Solutions, chúng tôi đã cảm thấy những tác động tích cực mà ESS sẽ đem lại cho đất nước Việt Nam. Đặc biệt, khi được làm việc với Trí, tôi cảm
-                    thấy tầm nhìn, sự nhiệt huyết, đam mê, và tinh thần trách nhiệm cao, điều mà quyết định rất lớn đến quyết định đầu tư của chúng tôi.
+                <p><i class="fas fa-quote-left quote"></i>Ngay từ khi đọc bản đề xuất kinh doanh của Eco Smart
+                    Solutions, chúng tôi đã cảm thấy những tác động tích cực mà ESS sẽ đem lại cho đất nước Việt Nam.
+                    Đặc biệt, khi được làm việc với Trí, tôi cảm
+                    thấy tầm nhìn, sự nhiệt huyết, đam mê, và tinh thần trách nhiệm cao, điều mà quyết định rất lớn đến
+                    quyết định đầu tư của chúng tôi.
                     <i class="fas fa-quote-right quote"></i>
                 </p>
 
@@ -45,7 +48,9 @@
 
             <div class="c_box">
                 <p>
-                    <i class="fas fa-quote-left quote"></i> Giải pháp hỗ trợ thúc đẩy kinh doanh cho các doanh nghiệp phát triển bền vững của Eco Smart Solutions là một mô hình kinh doanh bền vững và có tính hiệu quả cao, góp phần tham gia vào các chính
+                    <i class="fas fa-quote-left quote"></i> Giải pháp hỗ trợ thúc đẩy kinh doanh cho các doanh nghiệp
+                    phát triển bền vững của Eco Smart Solutions là một mô hình kinh doanh bền vững và có tính hiệu quả
+                    cao, góp phần tham gia vào các chính
                     sách phát triển bền vững của xã hội mà chính phủ đang đề ra.
                     <i class="fas fa-quote-right quote"></i>
                 </p>
@@ -55,7 +60,8 @@
                             Bùi Tôn Hiến
                         </div>
                         <div class="c_job">
-                            Cục trưởng cục Khoa học Lao Động và Xã Hội, Bộ Lao Động Thương Binh và Xã hội, trực tiếp chỉ đạo chính sách phát triển bền vững của Chính Phủ Việt Nam
+                            Cục trưởng cục Khoa học Lao Động và Xã Hội, Bộ Lao Động Thương Binh và Xã hội, trực tiếp chỉ
+                            đạo chính sách phát triển bền vững của Chính Phủ Việt Nam
                         </div>
                         <div class="c_rate">
                             <i class="fas fa-star"></i>
@@ -70,10 +76,37 @@
                     </div>
                 </div>
             </div>
-            <script
-            src="{{ url_for('static', filename='js/customer.js')}}"
-            type="text/javascript"
-          ></script>
+
+            <div class="c_box">
+                <p>
+                    <i class="fas fa-quote-left quote"></i> Giải pháp hỗ trợ thúc đẩy kinh doanh cho các doanh nghiệp
+                    phát triển bền vững của Eco Smart Solutions là một mô hình kinh doanh bền vững và có tính hiệu quả
+                    cao, góp phần tham gia vào các chính
+                    sách phát triển bền vững của xã hội mà chính phủ đang đề ra.
+                    <i class="fas fa-quote-right quote"></i>
+                </p>
+                <div class="c_content">
+                    <div class="c_info">
+                        <div class="c_name">
+                            Mỵ Store
+                        </div>
+                        <div class="c_job">
+                            Đối tác Eco Smart Solutions
+                        </div>
+                        <div class="c_rate">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="c_image">
+                        <img src="{{ url_for('static', filename='img/customer/customer_2.png') }}" alt="">
+                    </div>
+                </div>
+            </div>
+            <script src="{{ url_for('static', filename='js/customer.js')}}" type="text/javascript"></script>
         </div>
 
 
