update caption and UI

--- a/project/templates/unique_banner.html
+++ b/project/templates/unique_banner.html
@@ -16,14 +16,14 @@
             <div class="banner_item">
                 <span><i class="fa-solid fa-person-chalkboard"></i></span>
                 <div class="banner_item_heading">Chi phí tối ưu</div>
-                <div class="banner_item_content">“Với mục tiêu xây dựng và thúc đẩy cộng đồng doanh nghiệp bền vững vì
+                <div class="banner_item_content">Với mục tiêu xây dựng và thúc đẩy cộng đồng doanh nghiệp bền vững vì
                     xã hội, Eco Smart Solutions cam kết tái đầu tư toàn bộ 100% doanh thu trong ít nhất một năm đầu để
                     đảm bảo chất lượng tốt nhất cho khách hàng. </div>
             </div>
             <div class="banner_item">
                 <span><i class="fa-solid fa-person-chalkboard"></i></span>
                 <div class="banner_item_heading">Đội nhóm chuyên nghiệp</div>
-                <div class="banner_item_content">“Đội ngũ thành viên của Eco Smart Solutions luôn đặt tôn chỉ Hiệu quả -
+                <div class="banner_item_content"> Đội ngũ thành viên của Eco Smart Solutions luôn đặt tôn chỉ Hiệu quả -
                     Tôn trọng - Chuyên nghiệp. Luôn lắng nghe khách hàng.
                     Đảm bảo rằng khách hàng luôn nhận được sự hỗ trợ và phản hồi kịp thời khi có câu hỏi hoặc yêu cầu hỗ
                     trợ.
@@ -32,9 +32,9 @@
             <div class="banner_item">
                 <span><i class="fa-solid fa-person-chalkboard"></i></span>
                 <div class="banner_item_heading">Sứ mệnh cao cả</div>
-                <div class="banner_item_content">“Chúng tôi nỗ lực biến khát vọng xây dựng cuộc sống xanh và bền vững
+                <div class="banner_item_content"> Chúng tôi nỗ lực biến khát vọng xây dựng cuộc sống xanh và bền vững
                     thành hiện thực. Chúng tôi cam kết rằng GreenBoost sẽ là một sản phẩm hội tụ đủ các yếu tố Tâm - Tầm
-                    - Tín, đem lại giá trị cho khách hàng, môi trường và cộng đồng!”</div>
+                    - Tín, đem lại giá trị cho khách hàng, môi trường và cộng đồng! </div>
             </div>
         </div>
     </div>
